bk_ida/gccida/c3/peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3442:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v53; // [rsp+4h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3457:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[v6].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3460:32: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &v55, peep2_insn_data_0[v6].live_before); 
                               ^~~~~~~~~~~~~~~~~
                               peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3465:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[v6].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3468:31: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( v57, peep2_insn_data_0[v6].live_before); 
                              ^~~~~~~~~~~~~~~~~
                              peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3539:13: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
v12 = v11 + peep2_find_free_register_search_ofs; 
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3540:12: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
if ( v11 + peep2_find_free_register_search_ofs + 53 <= 52 ) 
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3541:13: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
v12 = v11 + peep2_find_free_register_search_ofs + 53; 
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3559:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = ( ( unsigned int)( mode_class_0[v54] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3560:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v54] - 5) < 2 == -1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3595:7: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
v12 = peep2_find_free_register_search_ofs + v46 - 53; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3596:6: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
if ( peep2_find_free_register_search_ofs + v46 <= 52 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3597:7: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'; did you mean 'peep2_find_free_register'?
v12 = peep2_find_free_register_search_ofs + v46; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      peep2_find_free_register
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3391:6: note: 'peep2_find_free_register' declared here
rtx  peep2_find_free_register( 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3620:1: error: use of undeclared identifier 'peep2_find_free_register_search_ofs'
peep2_find_free_register_search_ofs = 0; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3628:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v50 = ( ( unsigned int)( mode_class_0[v54] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3649:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = ( ( unsigned int)( mode_class_0[v54] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3660:81: error: use of undeclared identifier 'xmm'
v29 = _mm_add_epi32( _mm_shuffle_epi32( _mm_cvtsi32_si128( v24), 80), ( __m128i)xmm*(short *)0x65AE30); 
                                                                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/recog.c:3662:7: error: invalid conversion between vector type '__m128d' (vector of 2 'double' values) and integer type 'unsigned long long' of different size
v30 = ( __m128d)v25; 
      ^~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_find_free_register/src/obj/recog.o] Error 1
